...
        <EditText
            android:id="@+id/editTxtMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/colon"
            android:ems="2"
            android:hint="min"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/colon"
            app:layout_constraintEnd_toStartOf="@+id/colon"
            app:layout_constraintTop_toTopOf="@+id/colon" />
...
        <EditText
            android:id="@+id/editTxtSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/colon"
            android:ems="2"
            android:hint="sec"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/colon"
            app:layout_constraintStart_toEndOf="@+id/colon"
            app:layout_constraintTop_toTopOf="@+id/colon" />
...
